--- a/package.json
+++ b/package.json
@@ -34,11 +34,16 @@
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "glob": "^6.0.4",
+    "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-uglify": "^1.5.1",
+    "gulp-util": "^3.0.7",
     "less": "^2.6.0",
     "less-loader": "^2.2.2",
     "meow": "^3.7.0",
     "q": "^1.4.1",
     "style-loader": "^0.13.0",
+    "through": "^2.3.8",
     "webpack": "^1.12.12",
     "webpack-dev-server": "^1.14.1"
   },
