--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "mocha test/*.js",
-    "lint": "eslint ./lib/**/*.js ./test/**/*.js"
+    "lint": "eslint ./lib/**/*.js ./test/*.js"
   },
   "keywords": [
     "javascript",
@@ -24,7 +24,8 @@
   "license": "GPL-3.0",
   "devDependencies": {
     "eslint": "^1.10.3",
-    "mocha": "^2.4.5"
+    "mocha": "^2.4.5",
+    "tmp": "0.0.28"
   },
   "dependencies": {
     "async": "^1.5.2",
